# website_diff

./: .gitignore  Cargo.toml  README.md  diff-highlight.css  diff-scroll.js  jupyter-book-diff.css  jupyter-book-diff.js  pyproject.toml  run_tests.sh  website-diff.py  website_diff.py
.github/workflow-templates/: example_workflow.yml
examples/: run_tests.sh
examples/multipage_addpage/old/: foreword.html
examples/multipage_altair/new/: acknowledgements.html  authors.html  foreword-text.html  genindex.html  search.html  searchindex.js
examples/multipage_altair/old/: acknowledgements.html  index.html  objects.inv  preface-text.html  searchindex.js
examples/multipage_delpage/new/: index.html
examples/multipage_delpage/old/: reference-keys.txt
examples/multipage_nochange/old/: search_index.json
examples/multipage_plotly/new/: reference-keys.txt  regression1.html  regression2.html  search_index.json
examples/multipage_plotly/old/: 404.html  regression1.html  regression2.html  search_index.json
examples/multipage_textchange/new/: index.html
examples/multipage_textchange2/old/: index.html
examples/singlepage_swapimage/new/: 404.html
examples/singlepage_textchange/new/: index.html
src/: builder.rs  lib.rs
tests/multipage_addpage/diff/: foreword.html  index.html  website_diff.css
tests/multipage_addpage/new/: 404.html  foreword.html  search_index.json
tests/multipage_addpage/old/: search_index.json
tests/multipage_delpage/diff/: 404.html  foreword.html  index.html
tests/multipage_delpage/old/: index.html  preface.html
tests/multipage_nochange/diff/: foreword.html  index.html
tests/multipage_textchange/diff/: foreword.html  index.html
tests/multipage_textchange/old/: foreword.html
tests/multipage_textchange2/diff/: foreword.html  index.html
tests/multipage_textchange2/new/: 404.html  foreword.html
tests/singlepage_addimage/diff/: index.html
tests/singlepage_addimage/new/: index.html
tests/singlepage_chgimage/diff/: index.html
tests/singlepage_chgimage/new/: index.html
tests/singlepage_delelement/new/: index.html
website_diff/: __init__.py  cli.py  crawler.py  image.py  page.py  render.py  website_diff.css  website_diff.js  website_diff.py
website_diff/render/: __init__.py  altair.py  plotly.py  prerender.py
website_diff/static/: website_diff.css  website_diff.js
(+16 files in other folders)
