[project]
name = "website_diff"
version = "0.0.1"
description = "A simple tool for producing navigable, highlighted diffs of rendered HTML websites"
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Trevor Campbell", email = "trevor.d.campbell@gmail.com"},
]
dependencies = [
    "click",
    "loguru",
    "beautifulsoup4",
    "html_diff",
    "Pillow"
]

[project.scripts]
website_diff = "website_diff.cli:main"

[tool.setuptools]
package-data = {"website_diff" = ["*.css", "*.js"]}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


