[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "website_diff"
version = "0.0.1"
description = "A simple tool for producing navigable, highlighted diffs of rendered HTML websites"
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Trevor Campbell", email = "trevor.d.campbell@gmail.com"},
]
dependencies = [
    "click",
    "loguru",
    "beautifulsoup4",
    "Pillow",
    "numpy",
    "vl-convert-python",
    "selenium",
    "maturin"
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.scripts]
website_diff = "website_diff.cli:main"

[tool.setuptools]
package-data = {"website_diff" = ["*.css", "*.js"]}

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "website_diff.htmldiff"

